Issue #106 - Hide purple background when sidebar is active in Samsung S9, iPhone 6+, iPhone XS Issue #106 - Alignment for card changed to "between" with nested row wrapping

--- a/src/app/portal/events/events.component.css
+++ b/src/app/portal/events/events.component.css
@@ -63,7 +63,7 @@
 }
 
 .dark:before {
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(0,0,0,0.1);
 }
 
 .outline-modal {
